Add Gruntfile.js, fix bower.json, add package.json

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "juicy-draggable",
+  "version": "0.0.0",
   "homepage": "https://github.com/Juicy/juicy-draggable",
   "authors": [
     "Konstantin <const.miyang@gmail.com>"
