--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-    "name": "juicy-draggable",
-    "version": "0.0.3",
-    "description": "<juicy-draggable> is a custom element to make items draggable and droppable",
-    "main": "juicy-draggable.html",
-    "directories": { },
-    "dependencies": { },
-    "devDependencies": {
-        "grunt-bump": "^0.5.0"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Juicy/juicy-draggable"
-    },
-    "bugs": {
-        "url": "https://github.com/Juicy/juicy-draggable/issues"
-    },
-    "license": "MIT"
+  "name": "juicy-draggable",
+  "version": "0.1.0",
+  "description": "<juicy-draggable> is a custom element to make items draggable and droppable",
+  "main": "juicy-draggable.html",
+  "directories": {},
+  "dependencies": {
+    "grunt": "^1.0.1"
+  },
+  "devDependencies": {
+    "grunt-bump": "^0.5.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Juicy/juicy-draggable"
+  },
+  "bugs": {
+    "url": "https://github.com/Juicy/juicy-draggable/issues"
+  },
+  "license": "MIT"
 }
